# Rework-part-of-z3-proving

./: CMakeLists.txt  README.md
include/: HooksFromEmu.hpp
include/Phases/: FirstPhase.hpp  PhasePatcher.hpp  SecondPhase.hpp
include/z3/: z3ASMx64Instructions.hpp
src/: Dynamic-retdec-decompiler.cpp  Emu.cpp  Emu.hpp
src/Hooks/: HooksFromEmu.cpp  PhasePatcher.cpp
src/Hooks/FirstPhase/: FirstPhase.cpp  FirstPhase.hpp
src/Hooks/SecondPhase/: SecondPhase.cpp
src/PeLoaderEmu/: PeLoaderEmu.hpp  Work with DLL.cpp  Work with PE file.cpp
src/z3/: z3ASMx64Instructions.cpp  z3ASMx64Instructions.hpp  z3states.hpp
